frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> function
Rule 3     type -> Int
Rule 4     function -> type Identifier LParen RParen LBrace block RBrace
Rule 5     block -> block block_item
Rule 6     block -> empty
Rule 7     block_item -> statement
Rule 8     block_item -> declaration Semi
Rule 9     statement -> statement_matched
Rule 10    statement -> statement_unmatched
Rule 11    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 12    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 13    statement_unmatched -> If LParen expression RParen statement
Rule 14    statement_matched -> While LParen expression RParen statement_matched
Rule 15    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 16    statement_matched -> Return expression Semi
Rule 17    statement_matched -> opt_expression Semi
Rule 18    statement_matched -> LBrace block RBrace
Rule 19    statement_matched -> Break Semi
Rule 20    opt_expression -> expression
Rule 21    opt_expression -> empty
Rule 22    declaration -> type Identifier
Rule 23    declaration -> type Identifier Assign expression
Rule 24    expression -> assignment
Rule 25    assignment -> conditional
Rule 26    conditional -> logical_or
Rule 27    logical_or -> logical_and
Rule 28    logical_and -> bit_or
Rule 29    bit_or -> xor
Rule 30    xor -> bit_and
Rule 31    bit_and -> equality
Rule 32    equality -> relational
Rule 33    relational -> additive
Rule 34    additive -> multiplicative
Rule 35    multiplicative -> unary
Rule 36    unary -> postfix
Rule 37    postfix -> primary
Rule 38    unary -> Minus unary
Rule 39    unary -> BitNot unary
Rule 40    unary -> Not unary
Rule 41    assignment -> Identifier Assign expression
Rule 42    logical_or -> logical_or Or logical_and
Rule 43    logical_and -> logical_and And bit_or
Rule 44    bit_or -> bit_or BitOr xor
Rule 45    xor -> xor Xor bit_and
Rule 46    bit_and -> bit_and BitAnd equality
Rule 47    equality -> equality NotEqual relational
Rule 48    equality -> equality Equal relational
Rule 49    relational -> relational Less additive
Rule 50    relational -> relational Greater additive
Rule 51    relational -> relational LessEqual additive
Rule 52    relational -> relational GreaterEqual additive
Rule 53    additive -> additive Plus multiplicative
Rule 54    additive -> additive Minus multiplicative
Rule 55    multiplicative -> multiplicative Mul unary
Rule 56    multiplicative -> multiplicative Div unary
Rule 57    multiplicative -> multiplicative Mod unary
Rule 58    conditional -> logical_or Question expression Colon conditional
Rule 59    primary -> Integer
Rule 60    primary -> Identifier
Rule 61    primary -> LParen expression RParen
Rule 62    statement_matched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
Rule 63    statement_unmatched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
Rule 64    statement_matched -> For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
Rule 65    statement_unmatched -> For LParen declaration Semi opt_expression Semi opt_expression RParen statement_unmatched
Rule 66    statement_matched -> Do statement_matched While LParen expression RParen Semi
Rule 67    statement_unmatched -> Do statement_unmatched While LParen expression RParen Semi
Rule 68    statement_matched -> Continue Semi

Terminals, with rules where they appear

And                  : 43
Assign               : 23 41
BitAnd               : 46
BitNot               : 39
BitOr                : 44
Break                : 19
Colon                : 58
Continue             : 68
Div                  : 56
Do                   : 66 67
Else                 : 11 12
Equal                : 48
For                  : 62 63 64 65
Greater              : 50
GreaterEqual         : 52
Identifier           : 4 22 23 41 60
If                   : 11 12 13
Int                  : 3
Integer              : 59
LBrace               : 4 18
LParen               : 4 11 12 13 14 15 61 62 63 64 65 66 67
Less                 : 49
LessEqual            : 51
Minus                : 38 54
Mod                  : 57
Mul                  : 55
Not                  : 40
NotEqual             : 47
Or                   : 42
Plus                 : 53
Question             : 58
RBrace               : 4 18
RParen               : 4 11 12 13 14 15 61 62 63 64 65 66 67
Return               : 16
Semi                 : 8 16 17 19 62 62 63 63 64 64 65 65 66 67 68
While                : 14 15 66 67
Xor                  : 45
error                : 

Nonterminals, with rules where they appear

additive             : 33 49 50 51 52 53 54
assignment           : 24
bit_and              : 30 45 46
bit_or               : 28 43 44
block                : 4 5 18
block_item           : 5
conditional          : 25 58
declaration          : 8 64 65
empty                : 6 21
equality             : 31 46 47 48
expression           : 11 12 13 14 15 16 20 23 41 58 61 66 67
function             : 2
logical_and          : 27 42 43
logical_or           : 26 42 58
multiplicative       : 34 53 54 55 56 57
opt_expression       : 17 62 62 62 63 63 63 64 64 65 65
postfix              : 36
primary              : 37
program              : 0
relational           : 32 47 48 49 50 51 52
statement            : 7 13
statement_matched    : 9 11 11 12 14 62 64 66
statement_unmatched  : 10 12 15 63 65 67
type                 : 4 22 23
unary                : 35 38 39 40 55 56 57
xor                  : 29 44 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . function
    (4) function -> . type Identifier LParen RParen LBrace block RBrace
    (3) type -> . Int

    Int             shift and go to state 4

    program                        shift and go to state 1
    function                       shift and go to state 2
    type                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (2) program -> function .

    $end            reduce using rule 2 (program -> function .)


state 3

    (4) function -> type . Identifier LParen RParen LBrace block RBrace

    Identifier      shift and go to state 5


state 4

    (3) type -> Int .

    Identifier      reduce using rule 3 (type -> Int .)


state 5

    (4) function -> type Identifier . LParen RParen LBrace block RBrace

    LParen          shift and go to state 6


state 6

    (4) function -> type Identifier LParen . RParen LBrace block RBrace

    RParen          shift and go to state 7


state 7

    (4) function -> type Identifier LParen RParen . LBrace block RBrace

    LBrace          shift and go to state 8


state 8

    (4) function -> type Identifier LParen RParen LBrace . block RBrace
    (5) block -> . block block_item
    (6) block -> . empty
    (1) empty -> .

    RBrace          reduce using rule 1 (empty -> .)
    If              reduce using rule 1 (empty -> .)
    While           reduce using rule 1 (empty -> .)
    Return          reduce using rule 1 (empty -> .)
    LBrace          reduce using rule 1 (empty -> .)
    Break           reduce using rule 1 (empty -> .)
    For             reduce using rule 1 (empty -> .)
    Do              reduce using rule 1 (empty -> .)
    Continue        reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)
    Identifier      reduce using rule 1 (empty -> .)
    Minus           reduce using rule 1 (empty -> .)
    BitNot          reduce using rule 1 (empty -> .)
    Not             reduce using rule 1 (empty -> .)
    Integer         reduce using rule 1 (empty -> .)
    LParen          reduce using rule 1 (empty -> .)
    Semi            reduce using rule 1 (empty -> .)

    block                          shift and go to state 9
    empty                          shift and go to state 10

state 9

    (4) function -> type Identifier LParen RParen LBrace block . RBrace
    (5) block -> block . block_item
    (7) block_item -> . statement
    (8) block_item -> . declaration Semi
    (9) statement -> . statement_matched
    (10) statement -> . statement_unmatched
    (22) declaration -> . type Identifier
    (23) declaration -> . type Identifier Assign expression
    (11) statement_matched -> . If LParen expression RParen statement_matched Else statement_matched
    (14) statement_matched -> . While LParen expression RParen statement_matched
    (16) statement_matched -> . Return expression Semi
    (17) statement_matched -> . opt_expression Semi
    (18) statement_matched -> . LBrace block RBrace
    (19) statement_matched -> . Break Semi
    (62) statement_matched -> . For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
    (64) statement_matched -> . For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
    (66) statement_matched -> . Do statement_matched While LParen expression RParen Semi
    (68) statement_matched -> . Continue Semi
    (12) statement_unmatched -> . If LParen expression RParen statement_matched Else statement_unmatched
    (13) statement_unmatched -> . If LParen expression RParen statement
    (15) statement_unmatched -> . While LParen expression RParen statement_unmatched
    (63) statement_unmatched -> . For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
    (65) statement_unmatched -> . For LParen declaration Semi opt_expression Semi opt_expression RParen statement_unmatched
    (67) statement_unmatched -> . Do statement_unmatched While LParen expression RParen Semi
    (3) type -> . Int
    (20) opt_expression -> . expression
    (21) opt_expression -> . empty
    (24) expression -> . assignment
    (1) empty -> .
    (25) assignment -> . conditional
    (41) assignment -> . Identifier Assign expression
    (26) conditional -> . logical_or
    (58) conditional -> . logical_or Question expression Colon conditional
    (27) logical_or -> . logical_and
    (42) logical_or -> . logical_or Or logical_and
    (28) logical_and -> . bit_or
    (43) logical_and -> . logical_and And bit_or
    (29) bit_or -> . xor
    (44) bit_or -> . bit_or BitOr xor
    (30) xor -> . bit_and
    (45) xor -> . xor Xor bit_and
    (31) bit_and -> . equality
    (46) bit_and -> . bit_and BitAnd equality
    (32) equality -> . relational
    (47) equality -> . equality NotEqual relational
    (48) equality -> . equality Equal relational
    (33) relational -> . additive
    (49) relational -> . relational Less additive
    (50) relational -> . relational Greater additive
    (51) relational -> . relational LessEqual additive
    (52) relational -> . relational GreaterEqual additive
    (34) additive -> . multiplicative
    (53) additive -> . additive Plus multiplicative
    (54) additive -> . additive Minus multiplicative
    (35) multiplicative -> . unary
    (55) multiplicative -> . multiplicative Mul unary
    (56) multiplicative -> . multiplicative Div unary
    (57) multiplicative -> . multiplicative Mod unary
    (36) unary -> . postfix
    (38) unary -> . Minus unary
    (39) unary -> . BitNot unary
    (40) unary -> . Not unary
    (37) postfix -> . primary
    (59) primary -> . Integer
    (60) primary -> . Identifier
    (61) primary -> . LParen expression RParen

    RBrace          shift and go to state 15
    If              shift and go to state 22
    While           shift and go to state 23
    Return          shift and go to state 24
    LBrace          shift and go to state 14
    Break           shift and go to state 26
    For             shift and go to state 27
    Do              shift and go to state 28
    Continue        shift and go to state 29
    Int             shift and go to state 4
    Semi            reduce using rule 1 (empty -> .)
    Identifier      shift and go to state 12
    Minus           shift and go to state 42
    BitNot          shift and go to state 45
    Not             shift and go to state 46
    Integer         shift and go to state 48
    LParen          shift and go to state 13

    type                           shift and go to state 11
    block_item                     shift and go to state 16
    statement                      shift and go to state 17
    declaration                    shift and go to state 18
    statement_matched              shift and go to state 19
    statement_unmatched            shift and go to state 20
    expression                     shift and go to state 21
    opt_expression                 shift and go to state 25
    empty                          shift and go to state 30
    assignment                     shift and go to state 31
    conditional                    shift and go to state 32
    logical_or                     shift and go to state 33
    logical_and                    shift and go to state 34
    bit_or                         shift and go to state 35
    xor                            shift and go to state 36
    bit_and                        shift and go to state 37
    equality                       shift and go to state 38
    relational                     shift and go to state 39
    additive                       shift and go to state 40
    multiplicative                 shift and go to state 41
    unary                          shift and go to state 43
    postfix                        shift and go to state 44
    primary                        shift and go to state 47

state 10

    (6) block -> empty .

    RBrace          reduce using rule 6 (block -> empty .)
    If              reduce using rule 6 (block -> empty .)
    While           reduce using rule 6 (block -> empty .)
    Return          reduce using rule 6 (block -> empty .)
    LBrace          reduce using rule 6 (block -> empty .)
    Break           reduce using rule 6 (block -> empty .)
    For             reduce using rule 6 (block -> empty .)
    Do              reduce using rule 6 (block -> empty .)
    Continue        reduce using rule 6 (block -> empty .)
    Int             reduce using rule 6 (block -> empty .)
    Identifier      reduce using rule 6 (block -> empty .)
    Minus           reduce using rule 6 (block -> empty .)
    BitNot          reduce using rule 6 (block -> empty .)
    Not             reduce using rule 6 (block -> empty .)
    Integer         reduce using rule 6 (block -> empty .)
    LParen          reduce using rule 6 (block -> empty .)
    Semi            reduce using rule 6 (block -> empty .)


state 11

    (22) declaration -> type . Identifier
    (23) declaration -> type . Identifier Assign expression

    Identifier      shift and go to state 49


state 12

    (41) assignment -> Identifier . Assign expression
    (60) primary -> Identifier .

    Assign          shift and go to state 50
    Mul             reduce using rule 60 (primary -> Identifier .)
    Div             reduce using rule 60 (primary -> Identifier .)
    Mod             reduce using rule 60 (primary -> Identifier .)
    Plus            reduce using rule 60 (primary -> Identifier .)
    Minus           reduce using rule 60 (primary -> Identifier .)
    Less            reduce using rule 60 (primary -> Identifier .)
    Greater         reduce using rule 60 (primary -> Identifier .)
    LessEqual       reduce using rule 60 (primary -> Identifier .)
    GreaterEqual    reduce using rule 60 (primary -> Identifier .)
    NotEqual        reduce using rule 60 (primary -> Identifier .)
    Equal           reduce using rule 60 (primary -> Identifier .)
    BitAnd          reduce using rule 60 (primary -> Identifier .)
    Xor             reduce using rule 60 (primary -> Identifier .)
    BitOr           reduce using rule 60 (primary -> Identifier .)
    And             reduce using rule 60 (primary -> Identifier .)
    Question        reduce using rule 60 (primary -> Identifier .)
    Or              reduce using rule 60 (primary -> Identifier .)
    Semi            reduce using rule 60 (primary -> Identifier .)
    RParen          reduce using rule 60 (primary -> Identifier .)
    Colon           reduce using rule 60 (primary -> Identifier .)


state 13

    (61) primary -> LParen . expression RParen
    (24) expression -> . assignment
    (25) assignment -> . conditional
    (41) assignment -> . Identifier Assign expression
    (26) conditional -> . logical_or
    (58) conditional -> . logical_or Question expression Colon conditional
    (27) logical_or -> . logical_and
    (42) logical_or -> . logical_or Or logical_and
    (28) logical_and -> . bit_or
    (43) logical_and -> . logical_and And bit_or
    (29) bit_or -> . xor
    (44) bit_or -> . bit_or BitOr xor
    (30) xor -> . bit_and
    (45) xor -> . xor Xor bit_and
    (31) bit_and -> . equality
    (46) bit_and -> . bit_and BitAnd equality
    (32) equality -> . relational
    (47) equality -> . equality NotEqual relational
    (48) equality -> . equality Equal relational
    (33) relational -> . additive
    (49) relational -> . relational Less additive
    (50) relational -> . relational Greater additive
    (51) relational -> . relational LessEqual additive
    (52) relational -> . relational GreaterEqual additive
    (34) additive -> . multiplicative
    (53) additive -> . additive Plus multiplicative
    (54) additive -> . additive Minus multiplicative
    (35) multiplicative -> . unary
    (55) multiplicative -> . multiplicative Mul unary
    (56) multiplicative -> . multiplicative Div unary
    (57) multiplicative -> . multiplicative Mod unary
    (36) unary -> . postfix
    (38) unary -> . Minus unary
    (39) unary -> . BitNot unary
    (40) unary -> . Not unary
    (37) postfix -> . primary
    (59) primary -> . Integer
    (60) primary -> . Identifier
    (61) primary -> . LParen expression RParen

    Identifier      shift and go to state 12
    Minus           shift and go to state 42
    BitNot          shift and go to state 45
    Not             shift and go to state 46
    Integer         shift and go to state 48
    LParen          shift and go to state 13

    expression                     shift and go to state 51
    assignment                     shift and go to state 31
    conditional                    shift and go to state 32
    logical_or                     shift and go to state 33
    logical_and                    shift and go to state 34
    bit_or                         shift and go to state 35
    xor                            shift and go to state 36
    bit_and                        shift and go to state 37
    equality                       shift and go to state 38
    relational                     shift and go to state 39
    additive                       shift and go to state 40
    multiplicative                 shift and go to state 41
    unary                          shift and go to state 43
    postfix                        shift and go to state 44
    primary                        shift and go to state 47

state 14

    (18) statement_matched -> LBrace . block RBrace
    (5) block -> . block block_item
    (6) block -> . empty
    (1) empty -> .

    RBrace          reduce using rule 1 (empty -> .)
    If              reduce using rule 1 (empty -> .)
    While           reduce using rule 1 (empty -> .)
    Return          reduce using rule 1 (empty -> .)
    LBrace          reduce using rule 1 (empty -> .)
    Break           reduce using rule 1 (empty -> .)
    For             reduce using rule 1 (empty -> .)
    Do              reduce using rule 1 (empty -> .)
    Continue        reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)
    Identifier      reduce using rule 1 (empty -> .)
    Minus           reduce using rule 1 (empty -> .)
    BitNot          reduce using rule 1 (empty -> .)
    Not             reduce using rule 1 (empty -> .)
    Integer         reduce using rule 1 (empty -> .)
    LParen          reduce using rule 1 (empty -> .)
    Semi            reduce using rule 1 (empty -> .)

    block                          shift and go to state 52
    empty                          shift and go to state 10

state 15

    (4) function -> type Identifier LParen RParen LBrace block RBrace .

    $end            reduce using rule 4 (function -> type Identifier LParen RParen LBrace block RBrace .)


state 16

    (5) block -> block block_item .

    RBrace          reduce using rule 5 (block -> block block_item .)
    If              reduce using rule 5 (block -> block block_item .)
    While           reduce using rule 5 (block -> block block_item .)
    Return          reduce using rule 5 (block -> block block_item .)
    LBrace          reduce using rule 5 (block -> block block_item .)
    Break           reduce using rule 5 (block -> block block_item .)
    For             reduce using rule 5 (block -> block block_item .)
    Do              reduce using rule 5 (block -> block block_item .)
    Continue        reduce using rule 5 (block -> block block_item .)
    Int             reduce using rule 5 (block -> block block_item .)
    Identifier      reduce using rule 5 (block -> block block_item .)
    Minus           reduce using rule 5 (block -> block block_item .)
    BitNot          reduce using rule 5 (block -> block block_item .)
    Not             reduce using rule 5 (block -> block block_item .)
    Integer         reduce using rule 5 (block -> block block_item .)
    LParen          reduce using rule 5 (block -> block block_item .)
    Semi            reduce using rule 5 (block -> block block_item .)


state 17

    (7) block_item -> statement .

    RBrace          reduce using rule 7 (block_item -> statement .)
    If              reduce using rule 7 (block_item -> statement .)
    While           reduce using rule 7 (block_item -> statement .)
    Return          reduce using rule 7 (block_item -> statement .)
    LBrace          reduce using rule 7 (block_item -> statement .)
    Break           reduce using rule 7 (block_item -> statement .)
    For             reduce using rule 7 (block_item -> statement .)
    Do              reduce using rule 7 (block_item -> statement .)
    Continue        reduce using rule 7 (block_item -> statement .)
    Int             reduce using rule 7 (block_item -> statement .)
    Identifier      reduce using rule 7 (block_item -> statement .)
    Minus           reduce using rule 7 (block_item -> statement .)
    BitNot          reduce using rule 7 (block_item -> statement .)
    Not             reduce using rule 7 (block_item -> statement .)
    Integer         reduce using rule 7 (block_item -> statement .)
    LParen          reduce using rule 7 (block_item -> statement .)
    Semi            reduce using rule 7 (block_item -> statement .)


state 18

    (8) block_item -> declaration . Semi

    Semi            shift and go to state 53


state 19

    (9) statement -> statement_matched .

    RBrace          reduce using rule 9 (statement -> statement_matched .)
    If              reduce using rule 9 (statement -> statement_matched .)
    While           reduce using rule 9 (statement -> statement_matched .)
    Return          reduce using rule 9 (statement -> statement_matched .)
    LBrace          reduce using rule 9 (statement -> statement_matched .)
    Break           reduce using rule 9 (statement -> statement_matched .)
    For             reduce using rule 9 (statement -> statement_matched .)
    Do              reduce using rule 9 (statement -> statement_matched .)
    Continue        reduce using rule 9 (statement -> statement_matched .)
    Int             reduce using rule 9 (statement -> statement_matched .)
    Identifier      reduce using rule 9 (statement -> statement_matched .)
    Minus           reduce using rule 9 (statement -> statement_matched .)
    BitNot          reduce using rule 9 (statement -> statement_matched .)
    Not             reduce using rule 9 (statement -> statement_matched .)
    Integer         reduce using rule 9 (statement -> statement_matched .)
    LParen          reduce using rule 9 (statement -> statement_matched .)
    Semi            reduce using rule 9 (statement -> statement_matched .)


state 20

    (10) statement -> statement_unmatched .

    RBrace          reduce using rule 10 (statement -> statement_unmatched .)
    If              reduce using rule 10 (statement -> statement_unmatched .)
    While           reduce using rule 10 (statement -> statement_unmatched .)
    Return          reduce using rule 10 (statement -> statement_unmatched .)
    LBrace          reduce using rule 10 (statement -> statement_unmatched .)
    Break           reduce using rule 10 (statement -> statement_unmatched .)
    For             reduce using rule 10 (statement -> statement_unmatched .)
    Do              reduce using rule 10 (statement -> statement_unmatched .)
    Continue        reduce using rule 10 (statement -> statement_unmatched .)
    Int             reduce using rule 10 (statement -> statement_unmatched .)
    Identifier      reduce using rule 10 (statement -> statement_unmatched .)
    Minus           reduce using rule 10 (statement -> statement_unmatched .)
    BitNot          reduce using rule 10 (statement -> statement_unmatched .)
    Not             reduce using rule 10 (statement -> statement_unmatched .)
    Integer         reduce using rule 10 (statement -> statement_unmatched .)
    LParen          reduce using rule 10 (statement -> statement_unmatched .)
    Semi            reduce using rule 10 (statement -> statement_unmatched .)


state 21

    (20) opt_expression -> expression .

    Semi            reduce using rule 20 (opt_expression -> expression .)
    RParen          reduce using rule 20 (opt_expression -> expression .)


state 22

    (11) statement_matched -> If . LParen expression RParen statement_matched Else statement_matched
    (12) statement_unmatched -> If . LParen expression RParen statement_matched Else statement_unmatched
    (13) statement_unmatched -> If . LParen expression RParen statement

    LParen          shift and go to state 54


state 23

    (14) statement_matched -> While . LParen expression RParen statement_matched
    (15) statement_unmatched -> While . LParen expression RParen statement_unmatched

    LParen          shift and go to state 55


state 24

    (16) statement_matched -> Return . expression Semi
    (24) expression -> . assignment
    (25) assignment -> . conditional
    (41) assignment -> . Identifier Assign expression
    (26) conditional -> . logical_or
    (58) conditional -> . logical_or Question expression Colon conditional
    (27) logical_or -> . logical_and
    (42) logical_or -> . logical_or Or logical_and
    (28) logical_and -> . bit_or
    (43) logical_and -> . logical_and And bit_or
    (29) bit_or -> . xor
    (44) bit_or -> . bit_or BitOr xor
    (30) xor -> . bit_and
    (45) xor -> . xor Xor bit_and
    (31) bit_and -> . equality
    (46) bit_and -> . bit_and BitAnd equality
    (32) equality -> . relational
    (47) equality -> . equality NotEqual relational
    (48) equality -> . equality Equal relational
    (33) relational -> . additive
    (49) relational -> . relational Less additive
    (50) relational -> . relational Greater additive
    (51) relational -> . relational LessEqual additive
    (52) relational -> . relational GreaterEqual additive
    (34) additive -> . multiplicative
    (53) additive -> . additive Plus multiplicative
    (54) additive -> . additive Minus multiplicative
    (35) multiplicative -> . unary
    (55) multiplicative -> . multiplicative Mul unary
    (56) multiplicative -> . multiplicative Div unary
    (57) multiplicative -> . multiplicative Mod unary
    (36) unary -> . postfix
    (38) unary -> . Minus unary
    (39) unary -> . BitNot unary
    (40) unary -> . Not unary
    (37) postfix -> . primary
    (59) primary -> . Integer
    (60) primary -> . Identifier
    (61) primary -> . LParen expression RParen

    Identifier      shift and go to state 12
    Minus           shift and go to state 42
    BitNot          shift and go to state 45
    Not             shift and go to state 46
    Integer         shift and go to state 48
    LParen          shift and go to state 13

    expression                     shift and go to state 56
    assignment                     shift and go to state 31
    conditional                    shift and go to state 32
    logical_or                     shift and go to state 33
    logical_and                    shift and go to state 34
    bit_or                         shift and go to state 35
    xor                            shift and go to state 36
    bit_and                        shift and go to state 37
    equality                       shift and go to state 38
    relational                     shift and go to state 39
    additive                       shift and go to state 40
    multiplicative                 shift and go to state 41
    unary                          shift and go to state 43
    postfix                        shift and go to state 44
    primary                        shift and go to state 47

state 25

    (17) statement_matched -> opt_expression . Semi

    Semi            shift and go to state 57


state 26

    (19) statement_matched -> Break . Semi

    Semi            shift and go to state 58


state 27

    (62) statement_matched -> For . LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
    (64) statement_matched -> For . LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
    (63) statement_unmatched -> For . LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
    (65) statement_unmatched -> For . LParen declaration Semi opt_expression Semi opt_expression RParen statement_unmatched

    LParen          shift and go to state 59


state 28
